applications/_template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-name
  namespace: app-name
  labels:
    app.kubernetes.io/name: app-name
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-name
    spec:
      containers:
        - name: app-name
          image: ghcr.io/nicodm13/app-name:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
