applications/_template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-name
  namespace: app-name
  labels:
    app.kubernetes.io/name: app-name
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-name
  ports:
    - name: http
      port: 80
      targetPort: http
