applications/_template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-name
  namespace: app-name
spec:
  ingressClassName: traefik
  rules:
    - host: app-name.kvikit.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-name
                port:
                  name: http
